Run vivado to get local out.mcs.

--- a/gonsolo/Makefile
+++ b/gonsolo/Makefile
@@ -1,6 +1,7 @@
 FREQUENCY = 50
 STRATEGY = TIMING
-RISCV = /home/gonsolo/work/chipyard/.conda-env/riscv-tools
+#RISCV = /home/gonsolo/work/chipyard/.conda-env/riscv-tools
+RISCV =
 FIRESIM_ENV_SOURCED = 1
 FIRESIM = ../sims/firesim
 PLATFORM = rhsresearch_nitefury_ii
@@ -13,18 +14,20 @@ QUINTUPLET = $(PLATFORM)-$(TARGET_PROJECT)-$(DESIGN)-$(TARGET_CONFIG)-$(PLATFORM
 # This is the SOC as System Verilog in one file
 SV = $(FIRESIM)/sim/generated-src/$(PLATFORM)/$(QUINTUPLET)/$(DESIGN)-generated.sv
 
-# Vivado MCS file: This is the bitstream the FPGA is programmed with
-MCS = $(FIRESIM)/platforms/$(PLATFORM)/NiteFury-and-LiteFury-firesim/Sample-Projects/Project-0/cl_$(QUINTUPLET)/Nitefury-II/mcs/out.mcs
+DRIVER =$(FIRESIM)/sim/output/$(PLATFORM)/$(QUINTUPLET)/FireSim-rhsresearch_nitefury_ii
 
-all: sv
-sv: $(SV)
-$(SV) $(MCS):
-	$(MAKE) -C ../sims/firesim/sim RISCV=$(RISCV) FIRESIM_ENV_SOURCED=$(FIRESIM_ENV_SOURCED) PLATFORM=$(PLATFORM) TARGET_PROJECT=$(TARGET_PROJECT) DESIGN=$(DESIGN) TARGET_CONFIG=$(TARGET_CONFIG) PLATFORM_CONFIG=$(PLATFORM_CONFIG) replace-rtl
+all: driver
+
+driver: $(DRIVER)
+$(DRIVER):
+	$(MAKE) -j $(shell nproc) -C ../sims/firesim/sim RISCV=$(RISCV) FIRESIM_ENV_SOURCED=$(FIRESIM_ENV_SOURCED) PLATFORM=$(PLATFORM) TARGET_PROJECT=$(TARGET_PROJECT) DESIGN=$(DESIGN) TARGET_CONFIG=$(TARGET_CONFIG) PLATFORM_CONFIG=$(PLATFORM_CONFIG) replace-rtl
+
+# Vivado MCS file: This is the bitstream the FPGA is programmed with
+out.mcs: $(DRIVER)
+	vivado -mode batch -source top.tcl -tclargs $(FREQUENCY) $(STRATEGY)
 
 clean:
-	rm -rf project project.cache *.log *.jou $(MCS) $(SV)
+	rm -rf project project.cache *.log *.jou $(SV) $(DRIVER)
 
-.PHONY: all clean sv
+.PHONY: all clean driver mcs sv
 
-# How to make a mcs (buried deep in the make command above):
-# vivado -mode batch -source top.tcl -tclargs $(FREQUENCY) $(STRATEGY)
