--- a/gonsolo/Makefile
+++ b/gonsolo/Makefile
@@ -41,6 +41,8 @@ BASE_BIN = $(BR_BASE)/br-base-bin
 distro: $(BASE_BIN) $(BASE_IMG)
 $(BASE_BIN) $(BASE_IMG):
 	cd $(FIREMARSHAL); ./marshal -v build br-base.json
+clean_distro_kernel:
+	rm -f $(BASE_BIN)
 
 run_simulation:
 	$(DRIVER) +permissive   +macaddr0=00:12:6D:00:00:02 +blkdev0=$(BASE_IMG) +niclog0=niclog0 +blkdev-log0=blkdev-log0  +trace-select=1 +trace-start=0 +trace-end=-1 +trace-output-format=0 +dwarf-file-name=$(BIN_DWARF) +autocounter-readrate=0 +autocounter-filename-base=AUTOCOUNTERFILE  +print-start=0 +print-end=-1 +linklatency0=6405 +netbw0=200 +shmemportname0=default  +domain=0x0000 +bus=0x08 +device=0x00 +function=0x0 +bar=0x0 +pci-vendor=0x10ee +pci-device=0x903f +permissive-off +prog0=$(BASE_BIN)
@@ -49,5 +51,5 @@ c: clean
 clean:
 	rm -rf project project.cache *.log *.jou $(SV) $(DRIVER) check_fingerprint
 
-.PHONY: all c clean distro driver
+.PHONY: all c clean clean_distro_kernel distro driver
 
