--- a/gonsolo/Makefile
+++ b/gonsolo/Makefile
@@ -51,15 +51,20 @@ run_simulation:
 WORKLOADS = $(FIRESIM)/deploy/workloads
 
 POWEROFF_IMG = $(WORKLOADS)/linux-poweroff/poweroffnode.ext2
-
 make_poweroff:
 	$(MAKE) -C $(WORKLOADS) linux-poweroff
 run_poweroff: make_poweroff
 	$(DRIVER) +permissive   +macaddr0=00:12:6D:00:00:02 +blkdev0=$(POWEROFF_IMG) +niclog0=niclog0 +blkdev-log0=blkdev-log0  +trace-select=1 +trace-start=0 +trace-end=-1 +trace-output-format=0 +dwarf-file-name=$(BIN_DWARF) +autocounter-readrate=0 +autocounter-filename-base=AUTOCOUNTERFILE  +print-start=0 +print-end=-1 +linklatency0=6405 +netbw0=200 +shmemportname0=default  +domain=0x0000 +bus=0x08 +device=0x00 +function=0x0 +bar=0x0 +pci-vendor=0x10ee +pci-device=0x903f +permissive-off +prog0=$(BASE_BIN)
 
+BORG_IMG = $(WORKLOADS)/borg/borgnode.ext2
+make_borg:
+	$(MAKE) -C $(WORKLOADS) borg
+run_borg: make_borg
+	$(DRIVER) +permissive   +macaddr0=00:12:6D:00:00:02 +blkdev0=$(BORG_IMG) +niclog0=niclog0 +blkdev-log0=blkdev-log0  +trace-select=1 +trace-start=0 +trace-end=-1 +trace-output-format=0 +dwarf-file-name=$(BIN_DWARF) +autocounter-readrate=0 +autocounter-filename-base=AUTOCOUNTERFILE  +print-start=0 +print-end=-1 +linklatency0=6405 +netbw0=200 +shmemportname0=default  +domain=0x0000 +bus=0x08 +device=0x00 +function=0x0 +bar=0x0 +pci-vendor=0x10ee +pci-device=0x903f +permissive-off +prog0=$(BASE_BIN)
+
 c: clean
 clean:
 	rm -rf project project.cache *.log *.jou $(SV) $(DRIVER) check_fingerprint
 
-.PHONY: all c clean clean_distro_kernel distro driver make_poweroff run_poweroff run_simulation
+.PHONY: all c clean clean_distro_kernel distro driver make_borg make_poweroff run_poweroff run_simulation
 
