Do not use opensbi.

--- a/gonsolo/Makefile
+++ b/gonsolo/Makefile
@@ -74,6 +74,7 @@ clean_distro:
 	cd $(BOARDS)/default/linux; make mrproper
 	cd $(DRIVERS)/icenet-driver; make clean
 	cd $(DRIVERS)/iceblk-driver; make clean
+update_distro: clean_distro clean_distro_kernel distro
 # Compile manually:
 # make ARCH=riscv CROSS_COMPILE=riscv64-unknown-linux-gnu- vmlinux
 
@@ -121,7 +122,7 @@ program_device:
 	vivado_lab -mode tcl -source program.tcl
 
 qemu_debian:
-	qemu-system-riscv64 -machine 'virt' -cpu 'rv64' -smp cores=12,threads=2 -m 16G -device virtio-blk-device,drive=hd -drive file=debian.qcow2,if=none,id=hd -device virtio-net-device,netdev=net -netdev user,id=net,hostfwd=tcp::2222-:22 -bios /usr/share/opensbi/lp64/generic/firmware/fw_jump.elf -kernel /usr/share/u-boot-qemu-bin/qemu-riscv64_smode/uboot.elf -object rng-random,filename=/dev/urandom,id=rng -device virtio-rng-device,rng=rng -nographic -append "root=LABEL=rootfs console=ttyS0"
+	qemu-system-riscv64 -machine 'virt' -cpu 'rv64' -smp cores=12,threads=2 -m 16G -device virtio-blk-device,drive=hd -drive file=debian.qcow2,if=none,id=hd -device virtio-net-device,netdev=net -netdev user,id=net,hostfwd=tcp::2222-:22 -kernel /usr/share/u-boot-qemu-bin/qemu-riscv64_smode/uboot.elf -object rng-random,filename=/dev/urandom,id=rng -device virtio-rng-device,rng=rng -nographic -append "root=LABEL=rootfs console=ttyS0"
 # SSH: ssh root@localhost -p 2222
 # FTP: sftp -P 2222 root@localhost
 
@@ -130,5 +131,5 @@ xz:
 
 .PHONY: all c clean clean_distro_kernel connect_debian disconnect_debian distro driver edit_dts \
 	ls-dts ls-driver make_borg make_borg_tio make_poweroff mcs program_device \
-	qemu_debian run_simulation xdma xz
+	qemu_debian run_simulation update_distro xdma xz
 
